--- a/src/ecol620_Lab2.Rmd
+++ b/src/ecol620_Lab2.Rmd
@@ -49,7 +49,7 @@ library(terra)
 ```
 
 
-### Rules
+# Rules
 
 1. Using the provided R Markdown template, answer all questions and show your R code where necessary. Note, some questions are just plain text written answers.
 2. Complete your assignment using the R markdown file and submit individual assignments to Canvas. Knit your script and submit an .html file on Canvas. Please use  the following naming convention: lab2_firstname_lastname.html (ex. lab2_kyle_horton.html).  Note, we will not grade labs in any other format.
@@ -58,25 +58,58 @@ library(terra)
 
 Briefly describe (1-2 sentences) what each of the following functions achieve. All of these functions are seen throughout the Lab #2 example code. Use complete sentences (1 pt each). 
 
-* `crop()`
-* `ext()`
-* `disagg()`
-* `aggregate()`
-* `global()`
-* `mask()`
-* `res()`
-* `st_buffer()`
-* `rpois()`
+* `crop()` is from the `terra` package and is used to cut out a part of a raster based on another object or defined extent.
+* `ext()` is from the `terra` package and is used to return or create the extent of a raster.
+* `disagg()` - going from coarse to fine on raster, enhance the resolution (can do this by making all the same or use interpolation [e.g. distance weighted interpolation])
+* `aggregate()` is from the `terra` package and is used to create a new raster with a lower spatial resolution (e.g. coarser grain size) by applying an aggregate function (e.g. mean).
+* `global()` is from the `terra` package and is used to calculate summarized values (e.g. mean, sum) of the entire raster extent.
+* `mask()` is from the `terra` package and is used to update the values of a raster to `NA` for specified cells (e.g. from a separate mask raster).
+* `res()` is from the `terra` package and is used to get the resolution of a raster in terms of the grain (e.g. 30m$\times$30m).
+* `st_buffer()` is from the `sf` package and is used to compute a buffer of a defined distance around a geometry.
+* `rpois()` is used to draw a sample of $n$ from the Poisson distribution with parameter $\lambda$. 
 
-## Question 2 
+# Question 2 
 Create a 15 by 15 raster using the Poisson distribution to randomly draw the values. Design the raster to have a mean and variance of 5 (approximately). Generate a figure of the raster with cell values labeled (e.g., follow the aesthetic of Figure 2.5a, although with color). Include code to generate the raster and figure. For this example, use the supplied raster plotting code (don’t worry about ggplot, yet). Report the mean and variance of the newly generated raster. (3 pts)
 
 ```{r}
-
+# generate raster
+raster_size <- 15
+raster_temp <- terra::rast(ncol = raster_size, nrow = raster_size, xmin = 0, xmax = raster_size, ymin = 0, ymax = raster_size)
+# fill raster with random values
+raster_temp[] <- rpois(n = terra::ncell(raster_temp), lambda = 5)
+# plot raster
+  # and report the mean and variance
+raster_temp %>% as.data.frame(xy = TRUE) %>% 
+  ggplot(.) +
+    geom_raster(
+      mapping = aes(x = x, y = y, fill = lyr.1)
+    ) +
+    geom_text(
+      mapping = aes(x = x, y = y, label = lyr.1)
+      , color = "white"
+    ) +
+    scale_fill_viridis_c(option = "viridis") +
+    scale_x_continuous(expand = c(0, 0)) +
+    scale_y_continuous(expand = c(0, 0)) +
+    labs(
+      title = "15x15 raster with values drawn from the Poisson distribution"
+      , subtitle = paste0(
+        "Mean: "
+        , terra::global(raster_temp, fun = "mean")[[1]] %>% scales::comma(accuracy = .01)
+        , ", Variance: "
+        , terra::global(raster_temp, fun = "sd")[[1]]^2 %>% scales::comma(accuracy = .01)
+      )
+    ) +
+    theme_bw() +
+    theme(
+      legend.position = "none"
+    )
 ```
 
+Based on the example raster created from random values drawn from a Poisson distribution with $\lambda = 5$, the mean cell value is **`r terra::global(raster_temp, fun = "mean")[[1]] %>% scales::comma(accuracy = .01)`** and the variance of the entire raster extent is is **`r terra::global(raster_temp, fun = "sd")[[1]]^2 %>% scales::comma(accuracy = .01)`**.
 
-## Question 3
+# Question 3
+
 Within the “elevation” folder, there is a digital elevation raster of the southern Colorado areaAggregate (using the mean) the elevation raster by factors of 5, 30, 55, 80, …255 (i.e., by increments of 25). Plot the spatial grain versus spatial variance, using a log scale. Note, global won't calculate `var`, but will calculate `sd`. Describe the relationship between the two variables. (10 pts)
 
 
