--- a/src/ecol620_Lab2.Rmd
+++ b/src/ecol620_Lab2.Rmd
@@ -50,13 +50,12 @@ library(terra)
 set.seed(11)
 ```
 
-
 # Rules
 
 1. Using the provided R Markdown template, answer all questions and show your R code where necessary. Note, some questions are just plain text written answers.
 2. Complete your assignment using the R markdown file and submit individual assignments to Canvas. Knit your script and submit an .html file on Canvas. Please use  the following naming convention: lab2_firstname_lastname.html (ex. lab2_kyle_horton.html).  Note, we will not grade labs in any other format.
 
-## Question 1
+# Question 1
 
 Briefly describe (1-2 sentences) what each of the following functions achieve. All of these functions are seen throughout the Lab #2 example code. Use complete sentences (1 pt each). 
 
@@ -71,6 +70,7 @@ Briefly describe (1-2 sentences) what each of the following functions achieve. A
 * `rpois()` is used to draw a sample of $n$ from the Poisson distribution with parameter $\lambda$. 
 
 # Question 2 
+
 Create a 15 by 15 raster using the Poisson distribution to randomly draw the values. Design the raster to have a mean and variance of 5 (approximately). Generate a figure of the raster with cell values labeled (e.g., follow the aesthetic of Figure 2.5a, although with color). Include code to generate the raster and figure. For this example, use the supplied raster plotting code (don’t worry about ggplot, yet). Report the mean and variance of the newly generated raster. (3 pts)
 
 ```{r}
@@ -82,12 +82,13 @@ raster_temp[] <- rpois(n = terra::ncell(raster_temp), lambda = 5)
 # plot raster
   # and report the mean and variance
 raster_temp %>% as.data.frame(xy = TRUE) %>% 
+  dplyr::rename(value = 3) %>% 
   ggplot(.) +
     geom_raster(
-      mapping = aes(x = x, y = y, fill = lyr.1)
+      mapping = aes(x = x, y = y, fill = value)
     ) +
     geom_text(
-      mapping = aes(x = x, y = y, label = lyr.1)
+      mapping = aes(x = x, y = y, label = value)
       , color = "white"
     ) +
     scale_fill_viridis_c(option = "viridis") +
@@ -112,17 +113,42 @@ raster_temp %>% as.data.frame(xy = TRUE) %>%
 Based on the example raster created from random values drawn from a Poisson distribution with $\lambda = 5$, the mean cell value is **`r terra::global(raster_temp, fun = "mean")[[1]] %>% scales::comma(accuracy = .01)`** and the variance of the entire raster extent is is **`r terra::global(raster_temp, fun = "sd")[[1]]^2 %>% scales::comma(accuracy = .01)`**.
 </span>
 
+```{r, warning=FALSE, message=FALSE, echo=FALSE, include=FALSE}
+remove(list = ls()[grep("_temp",ls())])
+gc()
+```
+
 # Question 3
 
 Within the “elevation” folder, there is a digital elevation raster of the southern Colorado areaAggregate (using the mean) the elevation raster by factors of 5, 30, 55, 80, …255 (i.e., by increments of 25). Plot the spatial grain versus spatial variance, using a log scale. Note, global won't calculate `var`, but will calculate `sd`. Describe the relationship between the two variables. (10 pts)
 
-
 ```{r}
-#Hint for plotting:
-#ggplot()+
-#  geom_point()+
-#  theme_classic()+
-#  labs(y = "Log(spatial variance)", x = "Log( grain)")
+dem <- terra::rast("../data/elevation/srtm_15_05.tif")
+# define function
+fn_agg_mean <- function(my_fact, my_data) {
+  agg_temp <- terra::aggregate(my_data, fact = my_fact, fun = "mean")
+  return(
+    data.frame(
+      agg_factor = my_fact
+      , variance = terra::global(agg_temp, fun = "sd", na.rm = TRUE)[[1]]^2
+      , xres = terra::yres(agg_temp)
+      , yres = terra::yres(agg_temp)
+    )
+  )  
+}
+# create data frame of spatial variance vs grain using function defined above
+df_grain_variance <- seq(from = 5, to = 255, by = 25) %>% # define sequence for factors
+  purrr::map_dfr(fn_agg_mean, my_data = dem) # map = apply a function to each element of a list
+# plot
+ggplot(data = df_grain_variance) +
+  geom_point(aes(x = xres, y = variance), size = 3, color = "gray30") +
+  scale_y_log10() +
+  scale_x_log10() +
+  labs(
+    y = "Log(spatial variance)"
+    , x = "Log( grain)"
+  ) +
+  theme_bw() 
 ```
 
 
@@ -132,22 +158,68 @@ Include a plot of the elevation raster aggregated by a factor of 55 using ggplot
 
 
 ```{r}
-#Hint: Use the following lines of code to format the raster. 
-#SRTM_df <- as.data.frame(SRTM_df, xy=T); #ggplot doesn’t handle rasters that well. Convert to a dataframe
-#colnames(SRTM_df) <- c("X","Y","DEM")
-#head(SRTM_df)
+# aggregate dem using factor of 55
+df_dem_temp <- terra::aggregate(dem, fact = 55, fun = "mean") %>%
+  # convert to data frame
+  as.data.frame(xy = TRUE) %>% 
+  dplyr::rename(value = 3)
+# get list of states that overlap the dem
+state_list <- USAboundaries::us_states() %>% 
+  sf::st_crop(terra::ext(dem)) %>% 
+  sf::st_set_geometry(NULL) %>% 
+  dplyr::pull(var = stusps)
+# plot
+ggplot() +
+  geom_raster(
+    data = df_dem_temp
+    , mapping = aes(x = x, y = y, fill = value)
+  ) +
+  geom_sf(
+    data = USAboundaries::us_counties(states = state_list)
+    , alpha = 0, lwd = 0.5, color = "black"
+  ) +
+  geom_sf(
+    data = USAboundaries::us_states(states = state_list)
+    , alpha = 0, lwd = 1, color = "black"
+  ) +
+  scale_fill_viridis_c(
+    option = "cividis"
+    , alpha = 0.9
+    , na.value = "transparent"
+    , breaks = scales::extended_breaks(n = 6)
+    , labels = scales::comma
+  ) +
+  scale_x_continuous(expand = c(0, 0)) +
+  scale_y_continuous(expand = c(0, 0)) +
+  labs(
+    title = "Elevation map using DEM"
+    , subtitle = paste0(sort(state_list), collapse = ", ")
+    , x = ""
+    , y = ""
+    , fill = "Elev. (m)"
+  ) +
+  theme_bw() +
+  theme(
+    legend.position = "bottom"
+    , legend.direction = "horizontal"
+    , legend.margin = margin(0,0,0,0)
+    , legend.box.margin = margin(-21,0,2,0)
+    , legend.text = element_text(size = 7, angle = 25, hjust = 0.7)
+    , legend.title = element_text(size = 7)
+    , axis.text.y = element_text(size = 7)
+    , axis.text.x = element_text(size = 7, angle = 35, hjust = 0.7)
+    , panel.border = element_blank()
+    , plot.subtitle = element_text(size=9, face="italic")
+  )
 ```
 
+<span style="color: teal;">
+Note that the provided DEM overlaps portions of **`r sort(state_list)`** as shown in the map above.
+</span>
 
-```{r}
-#Plotting code
-#ggplot(don’t insert anything here)+
-#  geom_raster(data=insert the elevation dataframe information, aes(x=?, y=?, fill=?))+
-#  scale_fill_gradientn(insert a color scale)+
-#  geom_polygon(insert the state polygon information)+
-#  coord_cartesian(insert the extent of the elevation raster)+
-#  theme_classic(don’t insert anything here)+
-#  labs(y = "Latitude", x = "Longitude")
+```{r, warning=FALSE, message=FALSE, echo=FALSE, include=FALSE}
+remove(list = ls()[grep("_temp",ls())])
+gc()
 ```
 
 # Five-lined Skink Data (multi-scale analysis)
