--- a/src/ecol620_Lab2.Rmd
+++ b/src/ecol620_Lab2.Rmd
@@ -13,8 +13,9 @@ editor_options:
 knit: (function(inputFile, encoding){ 
     out_dir <- '../';
     rmarkdown::render(inputFile, encoding = encoding, output_file=file.path(dirname(inputFile), out_dir, 'index.html'));
-    rmarkdown::render(inputFile, encoding = encoding, output_file=file.path(dirname(inputFile), out_dir, '/data/lab2_george_woolsey.html')) 
+    file.copy(from = "..//index.html", to = '..///data//lab2_george_woolsey.html', overwrite = TRUE)
   })
+  
 ---
 
 # Setup
